SERVER-35903 Free monitoring disable without enabling does not work