jstests/free_mon/free_mon_rs_perm_del.js
@@ -24,8 +24,8 @@ load("jstests/free_mon/libs/free_mon.js");
 
     mock_web.waitRegisters(2);
 
-    assert.eq(FreeMonGetStatus(rst.getPrimary()).state, 'enabled');
-    assert.eq(FreeMonGetStatus(rst.getSecondary()).state, 'enabled');
+    assert.eq(FreeMonGetServerStatus(rst.getPrimary()).state, 'enabled');
+    assert.eq(FreeMonGetServerStatus(rst.getSecondary()).state, 'enabled');
 
     mock_web.enableFaults();
     mock_web.waitFaults(1);
@@ -33,9 +33,9 @@ load("jstests/free_mon/libs/free_mon.js");
     sleep(20 * 1000);
 
     // Make sure we are back to the initial state.
-    assert.eq(FreeMonGetStatus(rst.getPrimary()).state, 'undecided');
+    assert.eq(FreeMonGetServerStatus(rst.getPrimary()).state, 'undecided');
 
-    assert.eq(FreeMonGetStatus(rst.getSecondary()).state, 'undecided');
+    assert.eq(FreeMonGetServerStatus(rst.getSecondary()).state, 'undecided');
 
     // Disable the fault so we can re-enable again
     mock_web.disableFaults();
@@ -47,8 +47,8 @@ load("jstests/free_mon/libs/free_mon.js");
 
     sleep(20 * 1000);
 
-    assert.eq(FreeMonGetStatus(rst.getPrimary()).state, 'enabled');
-    assert.eq(FreeMonGetStatus(rst.getSecondary()).state, 'enabled');
+    assert.eq(FreeMonGetServerStatus(rst.getPrimary()).state, 'enabled');
+    assert.eq(FreeMonGetServerStatus(rst.getSecondary()).state, 'enabled');
 
     rst.stopSet();
 
